Refactored isBlank() method